// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewFeed renders a failed feed 1`] = `
.c1 {
  background-color: #3C3B41;
  padding: 1em;
}

.c2 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: #ADACB1;
  margin: 0 0 0.5em 0;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  padding: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #D8D7D9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 50px;
}

.c4:before {
  background-color: #e76e55;
  content: '';
  display: inline-block;
  height: 5px;
  width: 20px;
}

.c5 {
  background-color: #D8D7D9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  background-color: #ffd7cf;
  box-shadow: 4px 0 #3C3B41,0 -4px #3C3B41,-4px 0 #3C3B41,0 4px #3C3B41;
  color: #ce372b;
  height: 4em;
  margin: 1em;
  overflow: auto;
  padding: 0.25em;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0.5em;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #ADACB1;
  box-shadow: none;
}

.c10 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #E4303E;
  box-shadow: none;
}

.c0 {
  margin: auto;
  max-width: 450px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c11 {
  margin: auto;
  max-width: 450px;
  padding: 0 0.5em;
  position: relative;
  z-index: 0;
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h3
          class="c3"
        >
          review-feed
        </h3>
        <div
          class="c4"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          418: The resulting entity body MAY be short and stout.
        </div>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <button
            class="sc-AxiKw c9"
          >
            Filter
          </button>
          <button
            class="sc-AxiKw c9"
          >
            Reset
          </button>
        </div>
        <button
          class="sc-AxiKw c10"
        >
          Logout
        </button>
      </div>
    </div>
  </header>
  <section
    class="c11"
  />
</div>
`;

exports[`ReviewFeed renders a failed loading feed 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4d525666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c2 {
  background-color: #3C3B41;
  padding: 1em;
}

.c3 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  color: #ADACB1;
  margin: 0 0 0.5em 0;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  padding: 0;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #D8D7D9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 50px;
}

.c5:before {
  background-color: #e76e55;
  content: '';
  display: inline-block;
  height: 5px;
  width: 20px;
}

.c6 {
  background-color: #D8D7D9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  background-color: #ffd7cf;
  box-shadow: 4px 0 #3C3B41,0 -4px #3C3B41,-4px 0 #3C3B41,0 4px #3C3B41;
  color: #ce372b;
  height: 4em;
  margin: 1em;
  overflow: auto;
  padding: 0.25em;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0.5em;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #ADACB1;
  box-shadow: none;
}

.c11 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #E4303E;
  box-shadow: none;
}

.c1 {
  margin: auto;
  max-width: 450px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c12 {
  margin: auto;
  max-width: 450px;
  padding: 0 0.5em;
  position: relative;
  z-index: 0;
}

<div>
  <div
    class="c0"
  />
  <header
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <h3
          class="c4"
        >
          review-feed
        </h3>
        <div
          class="c5"
        />
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          Loading...
        </div>
      </div>
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <button
            class="sc-AxiKw c10"
          >
            Filter
          </button>
          <button
            class="sc-AxiKw c10"
          >
            Reset
          </button>
        </div>
        <button
          class="sc-AxiKw c11"
        >
          Logout
        </button>
      </div>
    </div>
  </header>
  <section
    class="c12"
  />
</div>
`;

exports[`ReviewFeed renders a loading feed 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4d525666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c2 {
  background-color: #3C3B41;
  padding: 1em;
}

.c3 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  color: #ADACB1;
  margin: 0 0 0.5em 0;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  padding: 0;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #D8D7D9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 50px;
}

.c5:before {
  background-color: #92cc41;
  content: '';
  display: inline-block;
  height: 5px;
  width: 20px;
}

.c6 {
  background-color: #D8D7D9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  background-color: #c9d68f;
  box-shadow: 4px 0 #3C3B41,0 -4px #3C3B41,-4px 0 #3C3B41,0 4px #3C3B41;
  color: #76c442;
  height: 4em;
  margin: 1em;
  overflow: auto;
  padding: 0.25em;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0.5em;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #ADACB1;
  box-shadow: none;
}

.c11 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #E4303E;
  box-shadow: none;
}

.c1 {
  margin: auto;
  max-width: 450px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c12 {
  margin: auto;
  max-width: 450px;
  padding: 0 0.5em;
  position: relative;
  z-index: 0;
}

<div>
  <div
    class="c0"
  />
  <header
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <h3
          class="c4"
        >
          review-feed
        </h3>
        <div
          class="c5"
        />
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          Loading...
        </div>
      </div>
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <button
            class="sc-AxiKw c10"
          >
            Filter
          </button>
          <button
            class="sc-AxiKw c10"
          >
            Reset
          </button>
        </div>
        <button
          class="sc-AxiKw c11"
        >
          Logout
        </button>
      </div>
    </div>
  </header>
  <section
    class="c12"
  />
</div>
`;

exports[`ReviewFeed renders a successful feed 1`] = `
.c13 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  display: block;
  margin: 0.5em;
  max-width: 450px;
  overflow-x: auto;
  padding: 0.5em;
  white-space: pre-wrap;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #212529;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: calc(2 * 1.5em);
}

.c1 {
  background-color: #3C3B41;
  padding: 1em;
}

.c2 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: #ADACB1;
  margin: 0 0 0.5em 0;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  padding: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #D8D7D9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 50px;
}

.c4:before {
  background-color: #92cc41;
  content: '';
  display: inline-block;
  height: 5px;
  width: 20px;
}

.c5 {
  background-color: #D8D7D9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  background-color: #c9d68f;
  box-shadow: 4px 0 #3C3B41,0 -4px #3C3B41,-4px 0 #3C3B41,0 4px #3C3B41;
  color: #76c442;
  height: 4em;
  margin: 1em;
  overflow: auto;
  padding: 0.25em;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0.5em;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #ADACB1;
  box-shadow: none;
}

.c10 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
  background-color: #E4303E;
  box-shadow: none;
}

.c12 {
  background-color: white;
  font-size: 0.5em;
  left: 2em;
  line-height: 1.5em;
  padding: 0 0.5em;
  position: relative;
  top: 1.2em;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c15 {
  display: block;
  width: 100%;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c17 {
  background-color: #c9d68f;
  margin: 0.5em;
  padding: 0 0.5em;
  white-space: nowrap;
}

.c18 {
  background-color: #E9C46A;
  margin: 0.5em;
  padding: 0 0.5em;
  white-space: nowrap;
}

.c19 {
  background-color: #ffd7cf;
  margin: 0.5em;
  padding: 0 0.5em;
  white-space: nowrap;
}

.c20 {
  margin: 0 1em;
}

.c0 {
  margin: auto;
  max-width: 450px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c11 {
  margin: auto;
  max-width: 450px;
  padding: 0 0.5em;
  position: relative;
  z-index: 0;
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h3
          class="c3"
        >
          review-feed
        </h3>
        <div
          class="c4"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          Listing all themes.
        </div>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <button
            class="sc-AxiKw c9"
          >
            Filter
          </button>
          <button
            class="sc-AxiKw c9"
          >
            Reset
          </button>
        </div>
        <button
          class="sc-AxiKw c10"
        >
          Logout
        </button>
      </div>
    </div>
  </header>
  <section
    class="c11"
  >
    <article>
      <div
        class="c12"
      >
        8/20/2020
      </div>
      <pre
        class="c13"
        type="black"
      >
        <code
          class="c14"
          type="black"
        >
          <div
            class="c15"
          >
            <div
              class="c16"
            >
              <span
                class="c17"
              >
                General
              </span>
              <span
                class="c18"
              >
                Other
              </span>
              <span
                class="c19"
              >
                Unspecific
              </span>
            </div>
            <hr />
            <div
              class="c20"
            >
              Good, Bad, and Ugly.
            </div>
          </div>
        </code>
      </pre>
    </article>
  </section>
</div>
`;
